Update CMake structure and add some new projects (plus one for check ml)

--- a/2025-2026/module-1/Var memory rofls/CMakeLists.txt
+++ b/2025-2026/module-1/Var memory rofls/CMakeLists.txt
@@ -1,7 +1,3 @@
-cmake_minimum_required(VERSION 4.0)
-project(HSE_2025_2029)
-
-set(CMAKE_CXX_STANDARD 14)
-
-add_executable(HSE_2025_2029
-        main.cpp)
+add_executable(module1_var_memory_rofls
+        main.cpp
+)
