--- a/2025-2026/module-1/Fun bits/CMakeLists.txt
+++ b/2025-2026/module-1/Fun bits/CMakeLists.txt
@@ -1,7 +1,3 @@
-cmake_minimum_required(VERSION 4.0)
-project(HSE_2025_2029)
-
-set(CMAKE_CXX_STANDARD 14)
-
-add_executable(HSE_2025_2029
-        main.cpp)
+add_executable(module1_fun_bits
+        main.cpp
+)
