--- a/2025-2026/module-1/CMakeLists.txt
+++ b/2025-2026/module-1/CMakeLists.txt
@@ -6,3 +6,8 @@ add_subdirectory("Something fun from teacher")
 add_subdirectory("TicTacToe")
 add_subdirectory("Var memory rofls")
 add_subdirectory("week-2")
+add_subdirectory("week-3")
+add_subdirectory("Quiz-2")
+add_subdirectory("Preparing-to-exam")
+add_subdirectory("Midterm")
+add_subdirectory("hw-7")
