--- a/2025-2026/module-1/Fun bits/CMakeLists.txt
+++ b/2025-2026/module-1/Fun bits/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(module1_fun_bits
         main.cpp
+        ../Preparing-to-exam/main.cpp
+        ../Midterm/main.cpp
+        ../../module-2/enum/task1.cpp
 )
