--- a/2025-2026/module-1/week-2/CMakeLists.txt
+++ b/2025-2026/module-1/week-2/CMakeLists.txt
@@ -1,6 +1,14 @@
 add_executable(module1_week2
         main.cpp
         function.cpp
+        plus.cpp
+        plus.h
+        minus.cpp
+        minus.h
+        multiply.cpp
+        multiply.h
+        divide.cpp
+        divide.h
 )
 # На всякий случай добавим путь к заголовку в текущей папке
 target_include_directories(module1_week2 PRIVATE
