--- a/2025-2026/module-2/enum/CMakeLists.txt
+++ b/2025-2026/module-2/enum/CMakeLists.txt
@@ -1,4 +1,8 @@
 add_executable(module2_enum
         task1.cpp
         task2.cpp
+        task3.cpp
+        task4.cpp
+        task6.cpp
+        task7.cpp
 )
