Module 2 new weeks (3 and 4)

--- a/2025-2026/module-2/CMakeLists.txt
+++ b/2025-2026/module-2/CMakeLists.txt
@@ -1,3 +1,6 @@
 # Агрегатор задач модуля 2
 add_subdirectory("enum")
 add_subdirectory("struct")
+add_subdirectory("HW-1")
+add_subdirectory("week-3")
+add_subdirectory("week-4")
